--- a/src/app/company/formcompany/formcompany.component.html
+++ b/src/app/company/formcompany/formcompany.component.html
@@ -1,15 +1,12 @@
 <div class="demo-page">
     <main style="margin-left: 150px;" class="demo-page-content">
   
-      <form  #userForm="ngForm" id="login-form" class="user-form" autocomplete="off" role="main"
-        autocomplete="off">
+      <form #userForm="ngForm" id="login-form" class="user-form" autocomplete="off" role="main" autocomplete="off">
         <section>
           <div class="href-target" id="input-types"></div>
-          <h1 style="    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-          ">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-              class="feather feather-align-justify">
+          <h1 style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+              stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-align-justify">
               <line x1="21" y1="10" x2="3" y2="10" />
               <line x1="21" y1="6" x2="3" y2="6" />
               <line x1="21" y1="14" x2="3" y2="14" />
@@ -18,51 +15,45 @@
             Company Information
           </h1>
           <div class="nice-form-group">
-            <label for="eventname">Event Name <span style="color: #dd6666;">*</span></label>
-            <input type="text" id="eventname" name="eventname" placeholder="Your evnet name"
-               />
+            <label for="eventname">Name <span style="color: #dd6666;">*</span></label>
+            <input type="text" id="eventname" name="eventname" placeholder="Your company name" style="width: 500px;" />
           </div>
           <div class="nice-form-group">
-            <label for="startDate" class="date-label">Start dateD <span style="color: #dd6666;">*</span></label>
-            <input type="date" id="startDate" name="startDate" class="date-input"
-               max="2024-12-31">
+            <label>Industry Sector<span style="color: #dd6666;">*</span></label>
+            <select style="width: 500px;">
+
+              <option>Information Technology (IT)</option>
+              <option>Healthcare</option>
+              <option>Finance</option>
+
+              <option>Retail</option>
+              <option>Education</option>
+
+              <option>Transportation</option>
+              <option>Hospitality</option>
+
+            </select>
           </div>
           <div class="nice-form-group">
-            <label for="priceticket">Price Ticket <span style="color: #dd6666;">*</span></label>
-            <input type="number" name="priceticket" placeholder="10dt" />
-          </div>
-  
-          <div class="nice-form-group">
-            <label for="capacity">capacity <span style="color: #dd6666;">*</span></label>
-            <input type="number" name="capacity" placeholder="20"  />
+            <label for="location">Location <span style="color: #dd6666;">*</span></label>
+            <input type="text" id="location" name="location" placeholder="Location" style="width: 500px;" />
           </div>
           <div class="nice-form-group">
-            <label for="poster">Event Poster <span style="color: #dd6666;">* </span>
-              <br>
-              <br>
-              <a href="https://www.appypie.com/design/poster/maker" target="_blank">Create your Poster with Appypie</a>
-            </label>
-            <input type="file" name="poster"  placeholder="URL here" />
+            <label for="phonenumber">Phone Number <span style="color: #dd6666;">*</span></label>
+            <input type="text" id="phonenumber" name="phonenumber" placeholder="Phone number" style="width: 500px;"/>
           </div>
-  
           <div class="nice-form-group">
-            <label for="description">description </label>
-            <textarea rows="5" name="description" placeholder="Your event description"
-             ></textarea>
-          </div>
-  
-          <div class="nice-form-group">
-            <label for="contactInformation"> Contact <span style="color: #dd6666;">*</span></label>
-            <input type="text" rows="5" name="contactInformation"
-              placeholder="Your Contact Information Here exemple@gmail.com"
-             >
+            <label for="website">Website <span style="color: #dd6666;">*</span></label>
+            <input type="text" id="website" name="website" placeholder="Website" style="width: 500px;"/>
           </div>
           <details>
             <summary>
-              <input class="submit" type="submit" value="Create" />
+                <button  class="buttonFilled" style="background-color: #E33203; border-width: 0px; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+                " routerLink="/formcompany2">NEXT</button>
             </summary>
           </details>
         </section>
       </form>
     </main>
   </div>
+  
