--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
+/* styles.css */
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 :root {
     --dl-color-gray-500: #595959;
     --dl-color-gray-700: #999999;
